// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot 1`] = `
<div>
  <div
    class="jsx-4018971342 Container"
  >
    <div
      class="jsx-1061080774 Container"
    >
      <div
        aria-label="Bouton de retour au tableau de bord"
        class="jsx-1061080774 Brand"
        role="button"
        tabindex="0"
      >
        <img
          alt="Code du travail numérique"
          class="jsx-1061080774 BrandLogo"
          src="/static/images/marianne.svg"
        />
        <div
          class="jsx-1061080774 BrandText"
        >
          <span
            class="jsx-1061080774 BrandTextTitle"
          >
            Code du travail numérique
          </span>
          <span
            class="jsx-1061080774 BrandTextSubtitle"
          >
            Outil de contribution
          </span>
        </div>
      </div>
    </div>
    <div
      class="jsx-4018971342 Content Content--horizontal"
    />
  </div>
</div>
`;

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot with \`isHorizontal\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,9 +31,9 @@
            </span>
          </div>
        </div>
      </div>
      <div
-       class=\\"jsx-4018971342 Content Content--horizontal\\"
+       class=\\"jsx-4018971342 Content\\"
      />
    </div>
  </DocumentFragment>"
`;

exports[`[Contrib] layouts/<Main /> (contributor) should match snapshot with \`isLoading\` prop 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -31,9 +31,22 @@
            </span>
          </div>
        </div>
      </div>
      <div
-       class=\\"jsx-4018971342 Content Content--horizontal\\"
+       class=\\"jsx-4018971342 Content Content--loading\\"
+     >
+       <div
+         class=\\"LoadingSpinner__Container-eu7nmw-0 dEMrTz\\"
+       >
+         <div
+           class=\\"LoadingSpinner__Spinner-eu7nmw-1 sHZX\\"
+           color=\\"#666666\\"
+         />
+         <div
+           class=\\"LoadingSpinner__Spinner-eu7nmw-1 LoadingSpinner__SpinnerNext-eu7nmw-2 daPQQA\\"
+           color=\\"#666666\\"
          />
+       </div>
+     </div>
    </div>
  </DocumentFragment>"
`;
